<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_trainner3">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FormPokemonActivity">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/pokemon_solid"
            android:gravity="center"
            android:text="@string/form_title"
            android:textColor="#FFEB3B"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/label_name"
            android:textColor="#FFF"
            app:layout_constraintEnd_toStartOf="@+id/ivPokemonForm"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/ivPokemonForm" />

        <TextView
            android:id="@+id/tvPokemonNameForm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/charizard"
            android:textColor="#FFF"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/tvPS"
            style="@style/form_label_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/label_ps"
            app:layout_constraintBottom_toBottomOf="@+id/ivPS"
            app:layout_constraintStart_toEndOf="@+id/ivPS"
            app:layout_constraintTop_toTopOf="@+id/ivPS" />

        <TextView
            android:id="@+id/tvAttack"
            style="@style/form_label_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/label_attack"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <TextView
            android:id="@+id/tvDefense"
            style="@style/form_label_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/label_defense"
            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
            app:layout_constraintStart_toEndOf="@+id/imageView10"
            app:layout_constraintTop_toTopOf="@+id/imageView10" />

        <TextView
            android:id="@+id/tvVelocity"
            style="@style/form_label_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/label_velocity"
            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
            app:layout_constraintStart_toStartOf="@+id/tvDefense"
            app:layout_constraintTop_toTopOf="@+id/imageView11" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="#FFEB3B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <SeekBar
            android:id="@+id/sbPS"
            style="@style/form_seekbar"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvPSValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPS" />

        <SeekBar
            android:id="@+id/sbAttack"
            style="@style/form_seekbar"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvAttackValue"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAttack" />

        <SeekBar
            android:id="@+id/sbDefense"
            style="@style/form_seekbar"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvDefenseValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDefense" />

        <SeekBar
            android:id="@+id/sbVelocity"
            style="@style/form_seekbar"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvVelocityValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvVelocity" />

        <TextView
            android:id="@+id/tvAttackValue"
            style="@style/form_label_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            app:layout_constraintBottom_toBottomOf="@+id/sbAttack"
            app:layout_constraintEnd_toEndOf="@+id/tvPSValue"
            app:layout_constraintTop_toTopOf="@+id/sbAttack" />

        <TextView
            android:id="@+id/tvDefenseValue"
            style="@style/form_label_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            app:layout_constraintBottom_toBottomOf="@+id/sbDefense"
            app:layout_constraintEnd_toEndOf="@+id/tvAttackValue"
            app:layout_constraintTop_toTopOf="@+id/sbDefense" />

        <TextView
            android:id="@+id/tvVelocityValue"
            style="@style/form_label_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            app:layout_constraintBottom_toBottomOf="@+id/sbVelocity"
            app:layout_constraintEnd_toEndOf="@+id/tvDefenseValue"
            app:layout_constraintTop_toTopOf="@+id/sbVelocity" />

        <TextView
            android:id="@+id/tvPSValue"
            style="@style/form_label_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/_2"
            app:layout_constraintBottom_toBottomOf="@+id/sbPS"
            app:layout_constraintEnd_toEndOf="@+id/ivPokemonForm"
            app:layout_constraintTop_toTopOf="@+id/sbPS" />

        <ImageView
            android:id="@+id/ivPS"
            style="@style/form_label_icon"
            android:layout_marginTop="64dp"
            app:layout_constraintStart_toStartOf="@+id/tvPokemonNameForm"
            app:layout_constraintTop_toBottomOf="@+id/tvPokemonNameForm"
            app:srcCompat="@drawable/ic_ps" />

        <ImageView
            android:id="@+id/imageView8"
            style="@style/form_label_icon"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/ivPS"
            app:layout_constraintTop_toBottomOf="@+id/sbPS"
            app:srcCompat="@drawable/ic_attack" />

        <ImageView
            android:id="@+id/imageView10"
            style="@style/form_label_icon"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/sbAttack"
            app:srcCompat="@drawable/ic_defense" />

        <ImageView
            android:id="@+id/imageView11"
            style="@style/form_label_icon"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/imageView10"
            app:layout_constraintTop_toBottomOf="@+id/sbDefense"
            app:srcCompat="@drawable/ic_velocity" />

        <ImageView
            android:id="@+id/ivPokemonForm"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_pokemon_form"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:srcCompat="@drawable/charizard" />

        <Button
            android:id="@+id/btSaveForm"
            style="@style/custom_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:text="@string/label_save"
            android:textColor="#673AB7"
            app:layout_constraintEnd_toEndOf="@+id/tvVelocityValue"
            app:layout_constraintStart_toStartOf="@+id/imageView11"
            app:layout_constraintTop_toBottomOf="@+id/sbVelocity" />

        <include
            android:id="@+id/loading"
            layout="@layout/include_loading" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>